--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tosspayments/payment-sdk": "^1.9.0",
     "next": "15.0.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
