--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "@tosspayments/payment-sdk": "^1.9.0",
-    "next": "15.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "jotai": "^2.10.3",
+    "next": "^15.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
