--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "jotai": "^2.10.3",
     "next": "^15.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "recoil": "^0.7.7"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
